fixed projects spacing
-made heights take up less space
-made sure title for project was on its own line.
-added GitHub icon.

--- a/css/index.css
+++ b/css/index.css
@@ -225,9 +225,37 @@
   padding-bottom: 20px;
 }
 
+#projects h2 {
+  font-size: 36px;
+  display: inline-block;
+}
+
+#projects .git-logo {
+  max-height: 50px;
+  margin-bottom: 15px;
+}
+
+#displayedProjectName {
+  display: block;
+  font-size: 20px;
+}
+
+#currentDisplayedProject img {
+  max-height: 40vh !important;
+}
+
+#otherProjects img {
+  max-height: 25vh !important;
+}
+
 #projects .project {
   border: 1px solid black;
   padding-bottom: 10px;
+  font-size: 16px;
+}
+
+#projects .project > span {
+  display: block;
 }
 
 #projects .img_placeholder {
